Okay hopes and prayers on this one. Setting player status to done on vote submission for active versus non active players (make choice voting sets all non active players to done, make outcome choice voting sets all ACTIVE players to done). Setting playerIds array in object to manage this process.
Added the concept of OutcomeForks. Outcome text can have multiple paths if more than one player writes for the same outcome and now those are managed in the Option object itself. Setting the outcome forks in the winning state of HOW_DOES_THIS_RESOLVE and AGAIN then retrieving them to be voted on if a player selects one with multiple outcome forks. Players in the non active group vote in a new voting step MAKE_OUTCOME_CHOICE_VOTING which resolves to one of the forks with votes.